fixed bugs, added swaggers
