# src/swagger/swagger.json
@@ -716,6 +716,37 @@
 					"taskId"
 				],
 				"type": "object"
+			},
+			"JWTAuthResponse": {
+				"properties": {
+					"access_token": {
+						"type": "string"
+					},
+					"token_type": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"access_token",
+					"token_type"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"FirebaseAuthResponse": {
+				"properties": {
+					"verified": {
+						"type": "boolean"
+					},
+					"auth": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"verified"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -868,7 +899,16 @@
 						"jwt": []
 					}
 				],
-				"parameters": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "cartId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
 				"requestBody": {
 					"required": true,
 					"content": {
@@ -880,14 +920,10 @@
 											"$ref": "#/components/schemas/CartItemsModelType"
 										},
 										"type": "array"
-									},
-									"cartId": {
-										"type": "string"
 									}
 								},
 								"required": [
-									"updatedItems",
-									"cartId"
+									"updatedItems"
 								],
 								"type": "object"
 							}
@@ -918,7 +954,17 @@
 						"jwt": []
 					}
 				],
-				"parameters": []
+				"parameters": [
+					{
+						"description": "incoming cartId",
+						"in": "path",
+						"name": "cartId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			},
 			"delete": {
 				"operationId": "DeleteCartbyId",
@@ -943,7 +989,16 @@
 						"jwt": []
 					}
 				],
-				"parameters": []
+				"parameters": [
+					{
+						"in": "path",
+						"name": "cartId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/cart": {
@@ -1034,7 +1089,7 @@
 				"parameters": []
 			}
 		},
-		"/cart/items": {
+		"/cart/{cartId}/items": {
 			"post": {
 				"operationId": "CreateCartItems",
 				"responses": {
@@ -1061,7 +1116,16 @@
 						"jwt": []
 					}
 				],
-				"parameters": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "cartId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
 				"requestBody": {
 					"description": "contains a list of CartItems and cartId",
 					"required": true,
@@ -1069,9 +1133,6 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"cartId": {
-										"type": "string"
-									},
 									"combinedCartItems": {
 										"items": {
 											"$ref": "#/components/schemas/CartItemsModelType"
@@ -1080,7 +1141,6 @@
 									}
 								},
 								"required": [
-									"cartId",
 									"combinedCartItems"
 								],
 								"type": "object",
@@ -1089,6 +1149,64 @@
 						}
 					}
 				}
+			}
+		},
+		"/auth/continue": {
+			"post": {
+				"operationId": "GetJWTAuth",
+				"responses": {
+					"200": {
+						"description": "An access token with bearer type",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/JWTAuthResponse"
+								}
+							}
+						}
+					}
+				},
+				"description": "Generate a JWT for the user",
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"description": "Truecaller token to validate and generate a JWT",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "string",
+								"description": "Truecaller token to validate and generate a JWT"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/verify-token": {
+			"get": {
+				"operationId": "GetFirebaseAuth",
+				"responses": {
+					"200": {
+						"description": "Firebase authentication status",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/FirebaseAuthResponse"
+								}
+							}
+						}
+					}
+				},
+				"description": "Verify Firebase authentication",
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
